infrastructure/docker-registry/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: docker-registry-compression
  namespace: docker-registry
spec:
  compress: {}
